--- a/VS-QuickNavigation/ToolWindow/QuickMethod/QuickMethodToolWindowControl.xaml
+++ b/VS-QuickNavigation/ToolWindow/QuickMethod/QuickMethodToolWindowControl.xaml
@@ -29,17 +29,11 @@
                     <GridViewColumn Width="800" Header="Symbol">
                         <GridViewColumn.CellTemplate >
                             <DataTemplate>
-                                <ItemsControl ItemsSource="{Binding FileFormatted}">
-                                    <ItemsControl.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <WrapPanel/>
-                                        </ItemsPanelTemplate>
-                                    </ItemsControl.ItemsPanel>
-                                </ItemsControl>
+                                <Label Content="{Binding SearchFormatted}" Padding="1,1,1,1" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Width="80" Header="Line" DisplayMemberBinding="{Binding Path=Line}" />
+                    <GridViewColumn Width="80" Header="Line" DisplayMemberBinding="{Binding Path=StartLine}" />
                     <GridViewColumn Width="50" Header="Match" DisplayMemberBinding="{Binding Path=SearchScore}" />
                     </GridView>
                 </ListView.View>
