--- a/VS-QuickNavigation/ToolWindow/QuickMethod/QuickMethodToolWindowControl.xaml
+++ b/VS-QuickNavigation/ToolWindow/QuickMethod/QuickMethodToolWindowControl.xaml
@@ -31,13 +31,13 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <Viewbox Width="30" Height="16">
-                                        <Label Content="{Binding SearchScore}" Padding="0,0,5,0" 
+                                        <Label Content="{Binding SearchScoreString}" Padding="0,0,5,0" 
                                            HorizontalContentAlignment="Center"
                                            VerticalContentAlignment="Center"
                                            FontWeight="DemiBold"
                                            Foreground="Gray"/>
                                     </Viewbox>
-                                    <Image Source="{Binding Path=Data.IconString}" Width="16" Height="16"/>
+                                    <Image Source="{Binding Path=Data.ImagePath}" Width="16" Height="16"/>
                                     <Label Content="{Binding SearchFormatted}" Padding="5,1,1,1" />
                                 </StackPanel>
                             </DataTemplate>
