--- a/VS-QuickNavigation/ToolWindow/QuickFile/QuickFileToolWindowControl.xaml
+++ b/VS-QuickNavigation/ToolWindow/QuickFile/QuickFileToolWindowControl.xaml
@@ -22,8 +22,11 @@
                  TextWrapping="Wrap" KeyDown="textBox_KeyDown" KeyUp="textBox_KeyDown" TextChanged="textBox_TextChanged" />
         <ListView x:Name="listView"
                   VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                  SelectionMode="Single" KeyDown="listView_KeyDown" KeyUp="listView_KeyDown"
-                  VirtualizingStackPanel.IsVirtualizing="True" MouseDoubleClick="listView_MouseDoubleClick"
+                  SelectionMode="Single"
+                  KeyDown="listView_KeyDown"
+                  KeyUp="listView_KeyDown"
+                  MouseDoubleClick="listView_MouseDoubleClick"
+                  SelectionChanged="listView_SelectionChanged"
                   >
             <ListView.View>
                 <GridView>
